--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "webpack-fail-plugin": "^2.0.0"
   },
   "dependencies": {
+    "npm": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
