--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/jest": "^22.1.3",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "apollo-codegen": "^0.19.1",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
@@ -74,10 +75,13 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "22.4.0",
     "nodemon": "^1.15.1",
+    "prettier": "^1.12.1",
     "rimraf": "^2.6.2",
     "thread-loader": "^1.1.2",
     "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.12.0",
     "tslint-config-standard": "^7.0.0",
+    "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^3.5.1",
     "typescript": "^2.7.2",
     "typescript-babel-jest": "^1.0.5",
@@ -87,7 +91,13 @@
     "webpack-fail-plugin": "^2.0.0"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.6",
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-link-http": "^1.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "react": "^16.2.0",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.2.0"
   },
   "browserslist": [
