--- a/package.json
+++ b/package.json
@@ -68,18 +68,21 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "cache-loader": "^1.2.0",
     "cross-env": "^5.1.3",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fork-ts-checker-notifier-webpack-plugin": "^0.2.0",
     "fork-ts-checker-webpack-plugin": "^0.3.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "22.4.0",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.15.1",
     "prettier": "^1.12.1",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "thread-loader": "^1.1.2",
     "tslint": "^5.9.1",
-    "tslint-config-prettier": "^1.12.0",
     "tslint-config-standard": "^7.0.0",
     "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^3.5.1",
@@ -94,6 +97,8 @@
     "apollo-boost": "^0.1.6",
     "apollo-cache-inmemory": "^1.2.1",
     "apollo-link-http": "^1.5.4",
+    "bloomer": "^0.6.3",
+    "bulma": "^0.7.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "react": "^16.2.0",
