--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/jest": "^22.1.3",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
+    "@types/react-router": "^4.0.25",
     "apollo-codegen": "^0.19.1",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "^3.1.0",
@@ -104,7 +105,8 @@
     "graphql-tag": "^2.9.2",
     "react": "^16.2.0",
     "react-apollo": "^2.1.4",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "browserslist": [
     "last 1 Chrome versions",
