--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/preset-typescript": "^7.0.0-beta.40",
     "@babel/register": "^7.0.0-beta.40",
     "@types/enzyme": "^3.1.9",
+    "@types/graphql": "^0.13.1",
     "@types/jest": "^22.1.3",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
@@ -103,6 +104,7 @@
     "bulma": "^0.7.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "moment": "^2.22.1",
     "react": "^16.2.0",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.2.0",
