--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "./",
     "jsx": "react",
     "module": "es2015",
+    "moduleResolution": "node",
     "target": "es2016",
     "noEmit": true,
     "noUnusedLocals": true,
@@ -14,5 +15,5 @@
     "skipLibCheck": true,
     "sourceMap": true
   },
-  "exclude": ["node_modules", "**/node_modules/*"]
+  "exclude": []
 }
