--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 language: node_js
+
 sudo: false
+
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
 node_js:
   - "8.4.0"
+
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
   - export PATH="$HOME/.yarn/bin:$PATH"
+
 install:
   - yarn install
+
 script:
   - yarn test
