--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
       "js",
       "jsx"
     ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less|sass|scss)$": "identity-obj-proxy"
+    },
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "typescript-babel-jest"
     },
@@ -51,7 +55,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.51",
     "@babel/node": "^7.0.0-beta.40",
     "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/preset-react": "^7.0.0-beta.40",
@@ -65,18 +69,22 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-router": "^4.0.25",
     "apollo-codegen": "^0.19.1",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^23.0.1",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "cache-loader": "^1.2.0",
     "cross-env": "^5.1.3",
+    "cross-fetch": "^2.2.1",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "npm:enzyme-react-adapter-future",
     "file-loader": "^1.1.11",
     "fork-ts-checker-notifier-webpack-plugin": "^0.2.0",
     "fork-ts-checker-webpack-plugin": "^0.3.0",
     "html-webpack-plugin": "^2.30.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "22.4.0",
     "node-sass": "^4.9.0",
     "nodemon": "^1.15.1",
@@ -93,6 +101,7 @@
     "typescript": "^2.7.2",
     "typescript-babel-jest": "^1.0.5",
     "uglifyjs-webpack-plugin": "^1.2.0",
+    "unfetch": "^3.0.0",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-fail-plugin": "^2.0.0"
@@ -109,8 +118,8 @@
     "graphql-tag": "^2.9.2",
     "moment": "^2.22.1",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0",
     "react-apollo": "^2.1.4",
+    "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2"
   },
   "browserslist": [
