--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "react": "^16.4.0",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "4.3.1"
   },
   "browserslist": [
     "last 1 Chrome versions",
