--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "apollo-link-http": "^1.5.4",
     "bloomer": "^0.6.3",
     "bulma": "^0.7.1",
+    "bulma-checkradio": "^2.1.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "moment": "^2.22.1",
