--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.6",
     "@types/react-router": "^4.0.25",
+    "@types/react-select": "^2.0.4",
     "apollo-codegen": "^0.19.1",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.0.1",
@@ -110,6 +111,7 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "add": "^2.0.6",
     "apollo-boost": "^0.1.15",
     "apollo-cache-inmemory": "^1.2.9",
     "apollo-link-http": "^1.5.4",
@@ -123,7 +125,8 @@
     "react": "^16.4.0",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.0",
-    "react-router-dom": "4.3.1"
+    "react-router-dom": "4.3.1",
+    "react-select": "^2.1.0"
   },
   "browserslist": [
     "last 1 Chrome versions",
