--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "graphql-tag": "^2.9.2",
     "moment": "^2.22.1",
     "query-string": "^6.1.0",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-apollo": "^2.1.11",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "4.3.1",
-    "react-scripts": "2.1.3",
-    "react-select": "^2.1.0",
-    "typescript": "3.2.2"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "react-select": "^3.0.4",
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
